[package]
name = "elefren"
version = "0.22.0"
description = "A wrapper around the Mastodon API."
authors = ["Aaron Power <theaaronepower@gmail.com>", "Paul Woolcock <paul@woolcock.us>"]
license = "MIT/Apache-2.0"
readme = "README.md"
repository = "https://github.com/pwoolcoc/elefren.git"
keywords = ["api", "web", "social", "mastodon", "wrapper"]
categories = ["web-programming", "web-programming::http-client", "api-bindings"]
edition = "2018"

[dependencies]
doc-comment = "0.3"
envy = { version = "0.4.0", optional = true }
hyper-old-types = "0.11.0"
isolang = { version = "1.0", features = ["serde_serialize"] }
log = "0.4.6"
reqwest = { version = "0.10.8", default-features = false, features = ["json", "blocking"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_urlencoded = "0.6.1"
serde_qs = "0.6.0"
url = "2.1.1"
tap-reader = "1"
toml = { version = "0.5.0", optional = true }
try_from = "0.3.2"
tungstenite = "0.11.0"

[dependencies.chrono]
version = "0.4"
features = ["serde"]

[features]
default = ["reqwest/default-tls"]
json = []
env = ["envy"]
all = ["toml", "json", "env"]
rustls-tls = ["reqwest/rustls-tls"]
nightly = []

[dev-dependencies]
tempfile = "3.0.3"
indoc = "1.0.2"
pretty_env_logger = "0.4.0"

[package.metadata.docs.rs]
features = ["all"]
