[package]
name = "elefren"
version = "0.22.1"
description = "A wrapper around the Mastodon API."
authors = [
    "Aaron Power <theaaronepower@gmail.com>",
    "Paul Woolcock <paul@woolcock.us>",
    "cerda <cerdamods@protonmail.com>",
]
license = "MIT/Apache-2.0"
readme = "README.md"
repository = "https://github.com/DeeUnderscore/elefren.git"
keywords = ["api", "web", "social", "mastodon", "wrapper"]
categories = ["web-programming", "web-programming::http-client", "api-bindings"]
edition = "2018"

[dependencies]
doc-comment = "0.3.3"
envy = { version = "0.4.2", optional = true }
hyper-old-types = "0.11.0"
isolang = { version = "1.0.0", features = ["serde_serialize"] }
log = "0.4.14"
reqwest = { version = "0.11.4", default-features = false, features = [
    "json",
    "blocking",
    "multipart",
] }
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.68"
serde_urlencoded = "0.7.0"
serde_qs = "0.8.4"
url = "2.2.2"
tap-reader = "1.0.1"
toml = { version = "0.5.8", optional = true }
tungstenite = "0.11.0"
async-trait = "0.1.51"
tokio = "1.11.0"
async-h1 = { version = "2.3.2", optional = true }
async-native-tls = { version = "0.3.3", optional = true }
smol = { version = "1.2.5", optional = true }
http-types = { version = "2.12.0", optional = true }
async-mutex = { version = "1.4.0", optional = true }

[dependencies.chrono]
version = "0.4.19"
features = ["serde"]

[features]
default = ["reqwest/default-tls"]
json = []
env = ["envy"]
all = ["toml", "json", "env", "async"]
rustls-tls = ["reqwest/rustls-tls"]
nightly = []
async = ["async-h1", "async-native-tls", "smol", "http-types", "async-mutex"]

[dev-dependencies]
tempfile = "3.2.0"
indoc = "1.0.3"
pretty_env_logger = "0.4.0"

[package.metadata.docs.rs]
features = ["all"]
