[package]
name = "elefren"
version = "0.23.0"
description = "A wrapper around the Mastodon API."
authors = [
  "Klaus Purer <klaus.purer@protonamil.ch>",
  "Aaron Power <theaaronepower@gmail.com>",
  "Paul Woolcock <paul@woolcock.us>",
]
license = "MIT/Apache-2.0"
readme = "README.md"
repository = "https://github.com/pwoolcoc/elefren.git"
keywords = ["api", "web", "social", "mastodon", "wrapper"]
categories = ["web-programming", "web-programming::http-client", "api-bindings"]
edition = "2021"

[dependencies]
doc-comment = "0.3.3"
envy = { version = "0.4.2", optional = true }
isolang = { version = "2.1.0", features = ["serde"] }
log = "0.4.17"
parse_link_header = { version = "0.3", features = ["url"] }
reqwest = { version = "0.11.11", default-features = false, features = ["json", "blocking", "multipart"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_urlencoded = "0.7.1"
serde_qs = "0.9.2"
url = "2.1.1"
tap-reader = "1"
toml = { version = "0.5.0", optional = true }
tungstenite = "0.11.0"
async-trait = "0.1.40"
async-h1 = { version = "2.1.2", optional = true }
async-native-tls = { version = "0.3.3", optional = true }
smol = { version = "1.2.2", optional = true }
http-types = { version = "2.5.0", optional = true }
async-mutex = { version = "1.4.0", optional = true }

[dependencies.chrono]
version = "0.4"
# Switching off default features removes a dependency to the "time" crate that
# contains a potential security issue.
# See https://github.com/time-rs/time/issues/293
default-features = false
features = ["serde"]

[features]
default = ["reqwest/default-tls"]
json = []
env = ["envy"]
all = ["toml", "json", "env", "async"]
rustls-tls = ["reqwest/rustls-tls"]
nightly = []
async = ["async-h1", "async-native-tls", "smol", "http-types", "async-mutex"]

[dev-dependencies]
tempfile = "3.0.3"
indoc = "1.0.2"
pretty_env_logger = "0.4.0"

[package.metadata.docs.rs]
features = ["all"]
